--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
 	<parent>
 		<groupId>com.rometools</groupId>
 		<artifactId>rome-parent</artifactId>
-		<version>1.5.0</version>
+		<version>1.5.1-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rome-certiorem</artifactId>
-	<version>1.5.0</version>
+	<version>1.5.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>rome-certiorem</name>
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>com.rometools</groupId>
 			<artifactId>rome-fetcher</artifactId>
-            <version>1.5.0</version>
+            <version>1.5.1-SNAPSHOT</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-httpclient</artifactId>
