--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>com.rometools</groupId>
 			<artifactId>rome-fetcher</artifactId>
-            <version>1.5.1-SNAPSHOT</version>
+            <version>1.5.1</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>commons-httpclient</artifactId>
